# x2py

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .pymon-journal  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  Semantic_Multilanguage_Wrapper_Runtime_Architecture.md  TEMP_ISSUE.md  THIRD_PARTY_NOTICES.md  __init__.py  changes.patch  conftest.py  fortran_parser.md  mkdocs.yml  parser_implementation_reference.md  pyproject.toml  scifortran-fixtures-2dac8e2.patch  sitecustomize.py
.githooks/: pre-commit  pre-merge-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: c-parser-main-guard.yml  claude.yml  docs.yml  fuzz.yml  parser-reference-guard.yml  quality.yml  tests.yml
c_parser/: __init__.py  __main__.py  cli.py  lexer.py  models.py  parser.py  preprocessor.py  project.py  type_resolver.py  utils.py
codegen/: binding_pipeline.py  scope.py
codegen/bindings/: base.py  c_to_python.py  cpp_to_python.py  cpython_api.py  numpy_cpython_api.py
codegen/bridges/: base.py  fortran_to_c.py
codegen/models/: basic.py  bind_c.py  builtins.py  c_concepts.py  core.py  datatypes.py  numpyext.py  operators.py
codegen/printers/: ccode.py  codegen.py  codeprinter.py  cppcode.py  cpythoncode.py  fcode.py  pybindcode.py  pycode.py
compiling/: compilers.py  library_config.py  project.py  python_wrapper.py  utilities.py
docs/: README.md  c_parser.md  c_pyi_self_contained_specification.md  developer.md  developper_guide.md  diagnostic_codes.md  documentation-architecture.md  examples.md  fortran_parser.md  fortran_wrapper.md  fortran_wrapper_checklist.md  fortran_wrapper_naming_policy.md  fortran_wrapper_ownership_policy.md  index.md  pyi_format.md  quality.md  quality_adoption_checklist.md  quality_tool_retention_report.md  semantics.md  tutorial.md  user.md  wrapper_design_notes.md  x2py_checklist.md
docs/architecture/: semantic_multilanguage_wrapper_runtime_architecture.md
docs/c_parser/: c_parser_architecture.md  c_parser_cli_workflow.md  c_parser_implementation_checklist.md  c_parser_main_merge_guard.md  c_parser_reference.md
docs/changelog/: index.md
docs/contributing/: coding-standards.md  contribution-guide.md  index.md  pull-request-workflow.md  review-process.md
docs/design/: code-generation.md  cpython-integration.md  error-propagation-model.md  index.md  memory-ownership-model.md  overall-architecture.md  parser-architecture.md  runtime-model.md  semantic-analysis.md  semantic-multilanguage-wrapper-runtime-architecture.md  wrapper-design-notes.md
docs/developer/: adding-a-code-generation-backend.md  adding-a-feature.md  adding-a-fortran-construct.md  build-system.md  c-parser-reference.md  coding-standards.md  development-workflow.md  feature-to-code-map.md  fortran-parser-reference.md  index.md  quality-assurance.md  repository-structure.md  source-map.md  testing-strategy.md
docs/developer-guide/: adding-a-code-generation-backend.md  adding-a-feature.md  adding-a-fortran-construct.md  build-system.md  c-parser-reference.md  ci-cd.md  coding-standards.md  feature-to-code-map.md  fortran-parser-reference.md  index.md  maintainer-guide.md  quality-assurance.md  release-process.md  repository-structure.md  source-map.md  testing-strategy.md
docs/examples-gallery/: blas-wrapper.md  cfd-mini-example.md  index.md  lapack-wrapper.md  mpi-example.md  object-oriented-fortran.md  ode-solver.md  openmp-example.md  verified-cookbook.md
docs/faq/: index.md
docs/fortran/: fortran_parser.md  parser_implementation_reference.md
docs/getting-started/: beginner-workflow.md  first-project.md  first-wrapped-function.md  first-wrapped-module.md  index.md  installation.md  verification.md
docs/internal-architecture/: error-handling-pipeline.md  index.md  pipeline-map.md  runtime-layer.md  semantic-passes.md  symbol-tables.md  type-system.md  wrapper-generation-pipeline.md
docs/javascripts/: code-copy.js
docs/language-support/: feature-matrix.md  index.md  partially-supported-features.md  planned-features.md  supported-features.md
docs/maintainer/: README.md  ci-cd.md  documentation-architecture.md  release-process.md
docs/old_docs/: c_parser.md  developper_guide.md  diagnostic_codes.md  examples.md  fortran_parser.md  fortran_wrapper.md  pyi_format.md  pyi_wrapper_checklist.md  quality.md  semantics.md  tutorial.md  wrapper_design_notes.md
docs/reference/: callbacks.md  cli-commands.md  configuration-files.md  diagnostic-codes.md  generated-classes.md  generated-functions.md  generated-modules.md  index.md  python-api.md  semantic-ir.md  semantic-pyi-format.md
docs/roadmap/: documentation-content-checklist.md  index.md  semantic-pyi-wrapper-checklist.md
docs/semantics/: c2ir_mapping.md  c_pyi_self_contained_specification.md  datatype_mapping.md  pyi_format.md
docs/stylesheets/: code-copy.css  site.css
docs/troubleshooting/: build-issues.md  runtime-issues.md  (+1 more)
fortran_parser/: __init__.py  cli.py  lexer.py  models.py  parser.py  pyi_context.py  type_resolver.py  utils.py
semantics/: __init__.py  asr_to_ast.py  c2ir.py  fortran2ir.py  models.py  pyi_parser.py  pyi_printer.py  readiness.py
tests/: README.md  compile_time_expressions.f90  generate_fortran_parser_goldens.py  test_cli.py  test_error_handling.py  test_fortran_error_fixture_suite.py  test_fortran_fixture_suite.py  test_fortran_json_sanity.py  test_fortran_signature_parser.py  test_runtime_handles.py
tools/: check_benchmark_regression.py  check_radon_policy.py  check_static_analysis_versions.py  check_wrapper_codegen_complexity.py  mkdocs_publication.py  print_pytest_failures.py  replay_wrapper_plan.py  run_mutmut.py  warm_real_library_native_cache.py  wrapper_plan_staged_walkthrough.py
x2py/: README.md  __init__.py  c_type_probe.py  cli.py  contracts.py  fortran_type_probe.py  numpy_types.py  ownership_policy.py  preprocessing.py  preprocessing_test_example.md  runtime_handles.py  semantic_metadata.py  stage_values.py  type_mapping_report.py  visitor.py  wrapping.py
x2py/stdlib/x2py_runtime/: CMakeLists.txt  meson.build  python_runtime.c  python_runtime.h
(+9079 files in other folders)
