[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2py"
version = "0.1.0"
description = "x2py: parser + semantic IR + Python stub generation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6; platform_system == 'Windows'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fortran_parser*", "semantics*", "x2py*",]

[project.scripts]
x2py = "x2py.cli:main"

[tool.coverage.run]
source = ["fortran_parser", "semantics", "x2py"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
